// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic function 1`] = `
"{
  \\"resource\\": {
    \\"aws_iam_role\\": {
      \\"main_Function_IamRole_4720F9A0\\": {
        \\"assume_role_policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":\\\\\\"sts:AssumeRole\\\\\\",\\\\\\"Principal\\\\\\":{\\\\\\"Service\\\\\\":\\\\\\"lambda.amazonaws.com\\\\\\"},\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\"
      }
    },
    \\"aws_iam_role_policy\\": {
      \\"main_Function_IamRolePolicy_37DF829C\\": {
        \\"policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\",\\\\\\"Action\\\\\\":\\\\\\"none:null\\\\\\",\\\\\\"Resource\\\\\\":\\\\\\"*\\\\\\"}]}\\",
        \\"role\\": \\"\${aws_iam_role.main_Function_IamRole_4720F9A0.name}\\"
      }
    },
    \\"aws_iam_role_policy_attachment\\": {
      \\"main_Function_IamRolePolicyAttachment_F3268EC3\\": {
        \\"policy_arn\\": \\"arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\\",
        \\"role\\": \\"\${aws_iam_role.main_Function_IamRole_4720F9A0.name}\\"
      }
    },
    \\"aws_lambda_function\\": {
      \\"main_Function_52CBB2F1\\": {
        \\"environment\\": {
          \\"variables\\": {
            \\"WING_FUNCTION_NAME\\": \\"Function\\"
          }
        },
        \\"function_name\\": \\"Function\\",
        \\"handler\\": \\"index.handler\\",
        \\"role\\": \\"\${aws_iam_role.main_Function_IamRole_4720F9A0.arn}\\",
        \\"runtime\\": \\"nodejs16.x\\",
        \\"s3_bucket\\": \\"\${aws_s3_bucket.main_Function_Bucket_DD1CA647.bucket}\\",
        \\"s3_key\\": \\"\${aws_s3_object.main_Function_S3Object_25A2F16E.key}\\"
      }
    },
    \\"aws_s3_bucket\\": {
      \\"main_Function_Bucket_DD1CA647\\": {}
    },
    \\"aws_s3_object\\": {
      \\"main_Function_S3Object_25A2F16E\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.main_Function_Bucket_DD1CA647.bucket}\\",
        \\"key\\": \\"<key>\\",
        \\"source\\": \\"<source>\\"
      }
    }
  }
}"
`;

exports[`basic function with environment variables 1`] = `
"{
  \\"resource\\": {
    \\"aws_iam_role\\": {
      \\"main_Function_IamRole_4720F9A0\\": {
        \\"assume_role_policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":\\\\\\"sts:AssumeRole\\\\\\",\\\\\\"Principal\\\\\\":{\\\\\\"Service\\\\\\":\\\\\\"lambda.amazonaws.com\\\\\\"},\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\"
      }
    },
    \\"aws_iam_role_policy\\": {
      \\"main_Function_IamRolePolicy_37DF829C\\": {
        \\"policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\",\\\\\\"Action\\\\\\":\\\\\\"none:null\\\\\\",\\\\\\"Resource\\\\\\":\\\\\\"*\\\\\\"}]}\\",
        \\"role\\": \\"\${aws_iam_role.main_Function_IamRole_4720F9A0.name}\\"
      }
    },
    \\"aws_iam_role_policy_attachment\\": {
      \\"main_Function_IamRolePolicyAttachment_F3268EC3\\": {
        \\"policy_arn\\": \\"arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\\",
        \\"role\\": \\"\${aws_iam_role.main_Function_IamRole_4720F9A0.name}\\"
      }
    },
    \\"aws_lambda_function\\": {
      \\"main_Function_52CBB2F1\\": {
        \\"environment\\": {
          \\"variables\\": {
            \\"BOOM\\": \\"BAM\\",
            \\"FOO\\": \\"BAR\\",
            \\"WING_FUNCTION_NAME\\": \\"Function\\"
          }
        },
        \\"function_name\\": \\"Function\\",
        \\"handler\\": \\"index.handler\\",
        \\"role\\": \\"\${aws_iam_role.main_Function_IamRole_4720F9A0.arn}\\",
        \\"runtime\\": \\"nodejs16.x\\",
        \\"s3_bucket\\": \\"\${aws_s3_bucket.main_Function_Bucket_DD1CA647.bucket}\\",
        \\"s3_key\\": \\"\${aws_s3_object.main_Function_S3Object_25A2F16E.key}\\"
      }
    },
    \\"aws_s3_bucket\\": {
      \\"main_Function_Bucket_DD1CA647\\": {}
    },
    \\"aws_s3_object\\": {
      \\"main_Function_S3Object_25A2F16E\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.main_Function_Bucket_DD1CA647.bucket}\\",
        \\"key\\": \\"<key>\\",
        \\"source\\": \\"<source>\\"
      }
    }
  }
}"
`;
